# vendel-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/vendel_sdk/: __init__.py  client.py  exceptions.py  types.py  webhook.py
tests/: test_client.py  test_exceptions.py  test_types.py  test_webhook.py
