[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vendel-sdk"
version = "0.4.0"
description = "Official Python SDK for the Vendel SMS gateway API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/JimScope/vendel-sdk-python"
Documentation = "https://vendel.cc/docs/api/sdks"
